# graduate_work

./: .env_example  .gitignore  README.md  architecture.puml  docker-compose.monitoring.yaml  docker-compose.yml  promtail-config.yml  requirements.txt
assistant_api/: Dockerfile  pyproject.toml
assistant_api/src/: main.py
assistant_api/src/api/v1/: assistant.py
assistant_api/src/constants/: messages.py
assistant_api/src/core/: config.py  logger.py
assistant_api/src/db/: abstract_cache_repository.py  abstract_repository.py  api_client.py  elastic_repository.py  redis_cache.py  remote_repository.py
assistant_api/src/models/: enums.py  film.py
assistant_api/src/nlp/bert/: bert_classifier.py  bert_dataset.py  test_model.py  train.py
assistant_api/src/nlp/classification/: README.md  model.py  question_classificator.py  train.py
assistant_api/src/nlp/ner/: README.md  check.py  prepare.py  test_model.py  train.json  trained_nlp.py
assistant_api/src/nlp_models/: classificator.pth  current_intents.json  intents.json
assistant_api/src/nlp_models/model-best/: meta.json
assistant_api/src/nlp_models/model-last/: config.cfg  meta.json
assistant_api/src/service/: handler_service.py
assistant_api/src/utils/: check_auth.py
assistant_api/tests/functional/: conftest.py  requirements.txt  settings.py
assistant_client/: pyproject.toml  requirements.txt
assistant_client/src/: audio_player.py  main.py  recorder.py  text_recognition.py  text_to_speech.py  translator.py  voice_recognition.py  voice_to_text.py
assistant_client/src/core/: config.py
etl/: main.py
(+59 files in other folders)
