[tool.poetry]
name = "assistant_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
aiohttp = "^3.9.5"
redis = "^5.0.4"
transformers = "^4.41.0"
pandas = "^2.2.2"
sentencepiece = "^0.2.0"
scikit-learn = "^1.5.0"
pytest = "^8.2.1"
spacy = "^3.7.4"
nltk = "^3.8.1"
elasticsearch = {version = "7.9.1", extras = ["async"]}
async-fastapi-jwt-auth = "^0.6.5"
fastapi = "0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
