[tool.poetry]
name = "assistant_client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
speechkit = "^2.2.2"
pyaudio = "^0.2.14"
deep-translator = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
